Redone the task using FileVisitor